# DirectEncode

./: DirectEncode.aps  DirectEncode.cpp  DirectEncode.def  DirectEncode.dsp  DirectEncode.dsw  DirectEncode.h  DirectEncode.idl  DirectEncode.ncb  DirectEncode.opt  DirectEncode.plg  DirectEncode.rc  DirectEncode.sln  DirectEncode.vcproj  DirectEncodeVB.cpp  DirectEncodeVB.h  DirectEncodeVB.rgs  DirectEncode_h.h  DirectEncode_i.c  DirectEncode_p.c  Encode.cpp  Encode.h  EncodeErdLib.cpp  EncodeErdLib.h  License.cpp  License.h  LogoOverlay.cpp  LogoOverlay.h  MPEGFilter.cpp  MPEGFilter.h  MPEGFilterInterface.cpp  MPEGFilterInterface.h  MPEGInputPin.cpp  MPEGInputPin.h  MPEGObj.cpp  MPEGObj.h  MPEGOutputPin.cpp  MPEGOutputPin.h  MPEGSeeking.cpp  MPEGSeeking.h  Profile.cpp  (+11 more)
Documentation/: Parameters.txt  swsscale.txt
Installer/: Authentification.txt  Files.nsh  GenNETLibs.bat  PostInstall.nsh  Redistribute.txt  Samples.nsh  StandardMpeg.nsi  StandardMpegEncoderLicense.rtf  Uninstall.nsh  gettingstarted.txt  headers.txt  license.rtf  make_install.bat  make_redist_zip.bat  order.txt  redist.lst  source_code_license.rtf  whatsnew.txt
Libraries/mplex/: Makefile.am  Makefile.in  Mplex.dsp  Mplex.dsw  Mplex.opt  Mplex.sln  Mplex.vcproj  ac3strm_in.cpp  aunitbuffer.hpp  bits.cpp  bits.hpp  config.h  domux.cpp  domux.h  dtsstrm_in.cpp  inputstrm.cpp  interact.cpp  interact.hpp  mpastrm_in.cpp  multiplexor.cpp  padstrm.cpp  systems.cpp  systems.hpp  videostrm.hpp  videostrm_in.cpp  win32defs.h  zalphastrm_in.cpp
Libraries/mplex/utils/: cpu_accel.c  cpuinfo.c  mjpeg_logging.cpp  mjpeg_types.h  motionsearch.c  motionsearch.h  mpegconsts.c  mpegconsts.h  yuv4mpeg.c
Libraries/mplex/utils/altivec/: Makefile.in
Libraries/mplex/utils/mmxsse/: Makefile.in  mblock_sad_mmxe.c  mblock_sub44_sads_x86.c
(+994 files in other folders)
